===============================================================================

version 5.0.5 ????
========================
o new method "addContent" for NehanPagedElement to push addional text to paged-element.
o add "nehan-clone" class to the blocks generated by cloned style.
o add "data-root-block-id" attribute to output dom for the blocks of direct children of body.

version 5.0.4 2014/12/8
========================
o support display:none
o set unique id as "data-block-id" for every block elements.
o set unique id(nehan-header-xxx) and common class(nehan-header) for every header eleemnts.
o add unique engine id to each header_id to handle the case multi-engines are running in single page.
! extract Client and Env as global module.
! change task runner from grunt -> gulp.
* fix line-break bug(double line-break).
* switch from float-generator to original parent generator if rest space is exhausted.

version 5.0.3 2014/08/05
=========================
o new interface 'Nehan.createPagedElement' is created. more abstract layer and easy to use.
o add plugin for gravator(nehan.gravator.js)
o add plugin(utility tag <pasted>)
* fix bug(updating selector value is failed when new value is object and old value is null).


version 5.0.2 2014/06/26
=========================
o regexp name selector is supported.
o to define custom single tag, add lexing-rule interfaces(setSingleTag, setSingleTagRex).
o enabled selector of multiple css classes like 'div.nehan-xxx.nehan-yyy.nehan-zzz'.
o enabled margin cancel.
o support 'auto' as 'table-layout'.
o support word-break property.
o add plugins directory.
o add plugins(font-awesome, speak, tip).
* eval unmanaged css props before store

version 5.0.1 2014/05/13
=========================
o now 'oncreate' property is enabled for selector value,
  called when layout is evaluated and dom element is created.
o global style interfaces Nehan.setStyle(or Nehan.setStyles) are added.
! now module UnitSize is included in StyleContext class.
