@@ -11,6 +11,7 @@ version 5.0.5 ????
 o new method "addContent" for NehanPagedElement to push addional text to paged-element.
 o add "nehan-clone" class to the blocks generated by cloned style.
 o add "data-root-block-id" attribute to output dom for the blocks of direct children of body.
+* treat "true" or "false" value in dataset as 'boolean'.
 
 version 5.0.4 2014/12/8
 ========================
